--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,9 +7,26 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <title>{% block page_title %}{% endblock %}</title>
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <script>
+            less = {
+                env: "development"
+            };
+        </script>
+        <link rel="stylesheet/less" type="text/css" href="/less/init.less" />
+        <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.7.0/less.min.js"></script>
     </head>
 
     <body>
-        Yahuu! vs.bug-bug.org
+        {% block navbar %}
+            {% include "parts/navbar.html.twig" %}
+        {% endblock %}
+        {% block content %}
+        {% endblock %}
+        {% block footer %}
+            {% include "parts/footer.html.twig" %}
+        {% endblock %}
+           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     </body>
 </html>
