--- a/public/less/site.less
+++ b/public/less/site.less
@@ -3,12 +3,16 @@ body {
 }
 /*HEADER*/
 .navbar {
-    background:#999;
+    background:#333;
+    margin:0;
 }
-.nav-container {
-    width:940px;
+.navbar-brand {
+    height:80px;
 }
-
+/*.my-container {
+     width:940px; 
+    margin:auto;
+}*/
 .active {
     text-decoration:underline;
 }
@@ -16,7 +20,7 @@ body {
 .titlediv {
     padding: 60px;
     margin-bottom: 30px;
-    background-color: #eeeeee;
+    background-color: #eee;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
@@ -24,7 +28,12 @@ body {
         font-size:60px;
     }
 }
-
+.my-container {
+    background-color: #eee;
+    width:100%;
+    margin:0;
+    padding:0;
+}
 /*FOOTER */
 h3 {
     font-size: 18px;
@@ -34,7 +43,7 @@ h3 {
 }
 
 .my-footer {
-    position:absolute;
+    position:relative;
     bottom:0;
     left:0;
     width:100%;
@@ -50,3 +59,5 @@ h3 {
         text-align:right;
     }
 }
+
+/* */
