--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
         </script>
         <link rel="stylesheet/less" type="text/css" href="/less/init.less" />
         <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.7.0/less.min.js"></script>
+        
     </head>
 
     <body>
@@ -27,6 +28,8 @@
             {% include "parts/footer.html.twig" %}
         {% endblock %}
            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        
+           <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+           <script src="bootstrap/js/tab.js">
     </body>
 </html>
