--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -3,8 +3,59 @@
 {% block page_title %}Viva sofa{% endblock %}
 
 {% block content %}
+
     <div class="titlediv">
-        <h1><strong>Очень важная либо красивая инфа только для стартовой страници</strong></h1>
+        <div class="container">
+            <h1><strong>Очень важная либо красивая инфа только для стартовой страници</strong></h1>
+        </div>
     </div>
+    <header class="my-header container my-container">
+        <h1>Некая информация о сайте, на каждой странице</h1>
+        <p>Описание информации о сайте ну или просто красивый рисунок на фоне :)</p>
+        <div class="my-menu">
+            <ul class="nav nav-tabs pull-left">
+                <li><a href="#">Акции</a></li>
+                <li class="dropdown">
+
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Классика<b class="caret"></b></a>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                        <li>1
+                        <li>2
+                        <li>3
+                    </ul>
+
+                </li>
+                <li class="dropdown">
+
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Модэрн<b class="caret"></b></a>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                        <li>1
+                        <li>2
+                        <li>3
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="my-menu">
+            <ul class="nav nav-tabs pull-right">
+                <li><a href="#">Гостинные</a></li>
+                <li><a href="#">Диваны</a></li>
+                <li><a href="#">Детские</a></li>
+                <li><a href="#">Спальни</a></li>
+                <li><a href="#">Матрасы</a></li>
+                <li><a href="#">Люстры</a></li>
+                <li><a href="#">Другие изделия</a></li>
+
+            </ul>
+        </div>
+    </header>
+
+    <div class="container">
+        <div class="row">
+            <div class="">
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
 
