--- a/templates/parts/navbar.html.twig
+++ b/templates/parts/navbar.html.twig
@@ -1,39 +1,43 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="nav-container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{ urlFor('home') }}">Logotips</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li{% if active == 'home' %} class="active"{% endif %}><a href="{{ urlFor('home') }}">В начало</a></li>
-                    
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Информация<b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Доставка</a></li>
-                            <li><a href="#">Гарантия</a></li>
-                            <li><a href="#">Партнеры</a></li>
-                        </ul>
-                    </li>
-                    <li{% if active == 'contacts' %} class="active"{% endif %}><a href="{{ urlFor('contacts') }}">Контакты</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Russian <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/">Russian</a></li>
-                            <li><a href="/eng">English</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div><!-- /.navbar-collapse -->
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="{{ urlFor('home') }}"><img src="/img/220x60.gif"></a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li{% if active == 'home' %} class="active"{% endif %}><a href="{{ urlFor('home') }}">В начало</a></li>
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Информация<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Доставка</a></li>
+                                <li><a href="#">Гарантия</a></li>
+                                <li><a href="#">Партнеры</a></li>
+                            </ul>
+                        </li>
+                        <li{% if active == 'contacts' %} class="active"{% endif %}><a href="{{ urlFor('contacts') }}">Контакты</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="/img/ru.png">&nbsp;Русский<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/"><img src="/img/ru.png">&nbsp;Русский</a></li>
+                                <li><a href="/lv"><img src="/img/lv.png">&nbsp;Latviski</a></li>
+                                <li><a href="/en"><img src="/img/gb.png">&nbsp;English</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div><!-- /.navbar-collapse -->
+        </div>
     </div><!-- /.container-fluid -->
+
 </nav>
