--- a/public/less/site.less
+++ b/public/less/site.less
@@ -1,13 +1,16 @@
 body {
-    background:#ddd;
+    background-color:#ddd;
 }
 /*HEADER*/
 .navbar {
     background:#333;
     margin:0;
 }
-.navbar-brand {
-    height:80px;
+.navbar-brand,
+.navbar-nav li a {
+    line-height: 80px;
+    height: 80px;
+    padding-top: 0;
 }
 /*.my-container {
      width:940px; 
@@ -20,7 +23,7 @@ body {
 .titlediv {
     padding: 60px;
     margin-bottom: 30px;
-    background-color: #eee;
+    
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
@@ -33,6 +36,9 @@ body {
     width:100%;
     margin:0;
     padding:0;
+}
+.thumbnails {
+    
 }
 /*FOOTER */
 h3 {
@@ -60,4 +66,8 @@ h3 {
     }
 }
 
-/* */
+/* LIST */
+
+.product-list {
+    
+}
