--- a/templates/parts/footer.html.twig
+++ b/templates/parts/footer.html.twig
@@ -24,9 +24,9 @@
 
 <div class="container my-footer">
     <div class="row">
-        <div class="span6 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
             © 2012 Viva-Sofa. All Rights Reserved.
         </div>
-        <div class="span6 col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="#">Наверх</a></div>
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="#">Наверх</a></div>
     </div>
 </div>
