--- a/templates/admin/product/edit.html.twig
+++ b/templates/admin/product/edit.html.twig
@@ -40,26 +40,12 @@
 
 {% block content %}
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <table class="table table-striped table-bordered table-condensed product-table">
-            <tr>
-                <td>ID</td>
-                <td>name</td>
-                <td>price</td>
-         
-            {% for product in data %}
-            </tr>     
-                    <td>{{product.id}}</td>
-                    <td>{{product.name}}</td>
-                    <td>{{product.price}}</td>
-                    <td>
-                        <a class="btn btn-warning" href="{{ urlFor('edit', {id:product.id}) }}">Edit</a>
-                        <a class="btn btn-danger" href="{{ urlFor('delete',{id:product.id}) }}">Delete</a>
-                        <a class="btn btn-success" href="{{ urlFor('view') }}">View</a>
-                    </td>   
-            </tr>
-            {% endfor %}
-        </table>
-         <a class="btn btn-success" href="{{ urlFor('add') }}" role="button">Add Product</a>
+        <form method="post">
+            <label for=name"">product name:</label> <input name="name" placeholder="name" value="{{product.name}}"><br>
+            <label for="price">product price</label> <input name="price" placeholder="price" value ="{{product.price}}"><br>            
+            <label for="description">descripton</label> <input name="description" placeholder="description" value="{{product.description}}"><br>
+            <button type="submit" class="btn btn-success">Update</button>
+        </form>                 
     </div>
 {% endblock %}
 
